--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,14 +3,14 @@
   <div class="authBlock">
   <h3>Sign In</h3>
   <div class="formGroup">
-  <input type="text" class="formControl" placeholder="Username" #userName required>
+  <input type="text" class="formControl" ng-model="user.name" placeholder="Username" #userName required>
   </div>
   <div class="formGroup">
-  <input type="password" class="formControl" placeholder="Password" #userPassword required>
+  <input type="password" class="formControl" ng-mode="user.password" placeholder="Password" #userPassword required>
   </div>
   <!-- Calling SignIn Api from AuthService -->
   <div class="formGroup">
-  <input type="button" class="btn btnPrimary" value="Log in" (click)="signWithEmail()">
+  <input type="button" class="btn btnPrimary" value="Log in" (click)="signInWithEmail()">
   </div>
   <div class="formGroup">
   <span class="or"><span class="orInner">Or</span></span>
@@ -27,7 +27,7 @@
   </div>
   </div>
   <div class="redirectToLogin">
-  <span>Don't have an account?<span class="redirect" routerLink="/register-user"> Sign Up</span></span>
+  <span>Don't have an account?<span class="redirect" routerLink="../sign-up"> Sign Up</span></span>
   </div>
   </div>
   </div>
